# PulsePioneer

./: CMakeLists.txt  README.md  partitions_32mb.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3-devkitc-1  sdkconfig.esp32-s3-devkitc-1.old  sdkconfig.esp32dev
boards/: esp32-s3-devkitc-1.json
components/encoder/: .eil.yml  CMakeLists.txt  idf_component.yml
components/encoder/examples/default/main/: idf_component.yml
include/: ecg.h  lcd.h
lib/ecg/: ecg.c  ecg.h
lib/gui/: SetupImg.c  gui.c  gui.h
lib/lcd/: lcd.c  lcd.h  old_lcd.c
lib/lvgl/: lv_conf.h
lib/preprocessing/: preprocessing.c  preprocessing.h
lib/tflm_wrapper/: models.c  models.cc  models.h  tflm_wrapper.cc  tflm_wrapper.cpp  tflm_wrapper.h
lib/waveform/: waveform.c  waveform.h
src/: CMakeLists.txt  ecg.c  lcd.c  main.c
